added styles to game

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <form>
             <input type="text" name="name" id="name" placeholder="Your Name here" required>
             <input type="number" name="score" id="score" placeholder="Your Score here" required>
-            <button type="submit" id="score-btn">submit</button>
+            <button type="submit" id="score-btn">Submit</button>
         </form>
     </section>
 </main>
